--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
 
     <uses-sdk
-        android:minSdkVersion="19"
+        android:minSdkVersion="22"
         android:targetSdkVersion="22" />
 
 
@@ -41,9 +41,9 @@
 
         <activity
             android:name="com.ajbtechnologies.MainMenuActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            android:launchMode="singleTask">
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -51,54 +51,65 @@
         </activity>
         <activity
             android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize" />
-        <activity android:name="com.ajbtechnologies.CreateEditListsActivity"
-            android:screenOrientation="portrait"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+            android:launchMode="singleTop" />
+        <activity
+            android:name="com.ajbtechnologies.CreateEditListsActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:launchMode="singleTask"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+
             />
         <activity
             android:name="com.ajbtechnologies.calendar.ListEventsActivity"
-            android:theme="@style/defaultTitle"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/defaultTitle" />
         <activity
             android:name="com.ajbtechnologies.CalculatorsActivity"
-            android:theme="@style/calculatorStyle"
-            android:windowSoftInputMode="stateHidden"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            />
-        <activity android:name="com.ajbtechnologies.calendar.EventActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/calculatorStyle"
+            android:windowSoftInputMode="stateHidden" />
+        <activity
+            android:name="com.ajbtechnologies.calendar.EventActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.ajbtechnologies.calendar.CalendarActivity"
-            android:theme="@style/defaultTitle"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/defaultTitle" />
         <activity
             android:name="com.ajbtechnologies.calendar.CustomRecurrenceActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/defaultTitle"
-            android:windowSoftInputMode="stateHidden"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.ajbtechnologies.calculators.CalculateUnitActivity"
-            android:theme="@style/calculatorStyle"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/calculatorStyle" />
         <activity
             android:name="com.ajbtechnologies.calculators.CalculateActivity"
-            android:theme="@style/calculatorStyle"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/calculatorStyle" />
         <activity
             android:name="com.ajbtechnologies.ListsHomeActivity"
-            android:theme="@style/defaultTitle"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            android:parentActivityName="com.ajbtechnologies.CreateEditListsActivity">
+            android:launchMode="singleTop"
+            android:parentActivityName="com.ajbtechnologies.CreateEditListsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/defaultTitle">
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -106,103 +117,128 @@
         </activity>
         <activity
             android:name="com.ajbtechnologies.ListHomeActivity"
-            android:theme="@style/defaultTitle" android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/defaultTitle"
            />
         <activity
             android:name="com.ajbtechnologies.ListInfoActivity"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
             android:theme="@style/defaultTitle"
             android:windowSoftInputMode="stateHidden" />
         <activity
             android:name="com.ajbtechnologies.ToDoItemActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/defaultTitle"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.ajbtechnologies.ItemActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/defaultTitle"
             android:windowSoftInputMode="stateHidden|adjustResize" />
         <activity
             android:name="com.ajbtechnologies.NotesActivity"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden"
-            android:theme="@style/defaultTitle"
-            android:parentActivityName="com.ajbtechnologies.MainMenuActivity"/>
+            android:launchMode="singleTop"
+            android:parentActivityName="com.ajbtechnologies.MainMenuActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/defaultTitle" />
         <activity
             android:name="com.ajbtechnologies.ImportInstructionsActivity"
-            android:theme="@style/defaultTitle"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/defaultTitle" />
         <activity
-            android:name="com.ajbtechnologies.ImportedListNameChoiceActivity"
-             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:name="com.ajbtechnologies.ImportedListNameChoiceDialogActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/defaultDialog" />
         <activity
             android:name="com.ajbtechnologies.SheetNameInputDialogActivity"
-            android:theme="@android:style/Theme.DeviceDefault.Dialog"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/defaultDialog" />
         <activity
             android:name="com.ajbtechnologies.CheckBoxListActivity"
-            android:theme="@style/defaultTitle"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/defaultTitle" />
         <activity
             android:name="com.ajbtechnologies.TextImportActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden" />
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity
-            android:name="com.ajbtechnologies.ImportActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden" />
+            android:name="com.ajbtechnologies.XMLImportActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.ajbtechnologies.ExcelImportActivity"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden" />
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.ajbtechnologies.errorhandling.ExceptionActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/error"
-            android:theme="@android:style/Theme.DeviceDefault.Dialog"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:theme="@android:style/Theme.DeviceDefault.Dialog">
         </activity>
         <activity
             android:name="com.ajbtechnologies.ImportErrorActivity"
-            android:theme="@style/defaultTitle"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/defaultTitle" />
         <activity
             android:name="com.ajbtechnologies.DrawNoteActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:label="@string/app_name"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:theme="@style/defaultTitle"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@style/defaultTitle" />
         <activity
             android:name="com.ajbtechnologies.ImageViewActivity"
-            android:theme="@android:style/Theme.Dialog"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@android:style/Theme.Dialog" />
         <activity
             android:name="com.ajbtechnologies.CalculatorsDialogActivity"
-            android:theme="@android:style/Theme.DeviceDefault.Dialog"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop"
             android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden"/>
+            android:theme="@android:style/Theme.DeviceDefault.Dialog" />
         <!-- Import Activities -->
         <activity
             android:name="com.ajbtechnologies.AttachmentProcessor"
-            android:screenOrientation="portrait"
-            android:configChanges="orientation|keyboardHidden">
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:mimeType="application/vnd.ms-excel" />
+                <data
+                    android:mimeType="application/vnd.ms-excel"
+                    android:scheme="file" />
+                <data
+                    android:mimeType="application/vnd.ms-excel"
+                    android:scheme="content" />
                 <data android:pathPattern="/.*\\.xls" />
                 <data android:host="*" />
             </intent-filter>
@@ -212,7 +248,12 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet" />
+                <data
+                    android:mimeType="application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+                    android:scheme="file" />
+                <data
+                    android:mimeType="application/vnd.ms-excel"
+                    android:scheme="content" />
                 <data android:pathPattern="/.*\\.xlsx" />
                 <data android:host="*" />
             </intent-filter>
@@ -280,6 +321,9 @@
             android:name="com.ajbtechnologies.services.TextImportService"
             android:exported="false" />
         <service
+            android:name="com.ajbtechnologies.services.XMLImportService"
+            android:exported="false" />
+        <service
             android:name="com.ajbtechnologies.services.UpdateRowNumService"
             android:exported="false" />
         <service
@@ -288,10 +332,11 @@
 
         <activity
             android:name="com.ajbtechnologies.NoteImageActivity"
-            android:theme="@style/defaultTitle"
-            android:screenOrientation="portrait"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:label="@string/title_activity_note_image">
+            android:label="@string/title_activity_note_image"
+            android:launchMode="singleTop"
+            android:screenOrientation="portrait"
+            android:theme="@style/defaultTitle">
         </activity>
 
     </application>
