--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "22.0.1"
 
     defaultConfig {
-        applicationId "com.honeydewit"
+        applicationId "com.ajbtechnologies"
         minSdkVersion 19
         targetSdkVersion 22
     }
